master: home pages changed

--- a/src/main/webapp/views/user/home-user.xhtml
+++ b/src/main/webapp/views/user/home-user.xhtml
@@ -24,7 +24,7 @@
 
 <h:body>
     <ui:insert name="header">
-        <ui:include src="../blocks/header.xhtml"/>
+        <ui:include src="../../blocks/user/user-header.xhtml"/>
     </ui:insert>
 
     <f:metadata>
@@ -32,9 +32,8 @@
     </f:metadata>
 
     <h:form>
-        <h:inputText value="Anon"/>
+        <h:inputText value="User"/>
     </h:form>
-
 
     <h:panelGroup layout="block" styleClass="jumbotron">
         <h:panelGroup layout="block" styleClass="container">
