master: code cleaned

--- a/src/main/webapp/views/admin/admin-animals.xhtml
+++ b/src/main/webapp/views/admin/admin-animals.xhtml
@@ -24,11 +24,11 @@
 
 <h:body>
     <ui:insert name="header">
-        <ui:include src="../../blocks/user/user-header.xhtml"/>
+        <ui:include src="../../blocks/admin/admin-header.xhtml"/>
     </ui:insert>
 
     <h:form>
-        <h:inputText value="User"/>
+        <h:inputText value="Admin"/>
     </h:form>
 
     <ui:insert>
