master: code refactored

--- a/src/main/webapp/views/register.xhtml
+++ b/src/main/webapp/views/register.xhtml
@@ -57,7 +57,7 @@
                                  requiredMessage="Input email!"
                                  validatorMessage="Incorrect email!">
                         <f:validateRegex
-                                pattern="((.[^@])+)@(mail|gmail|yandex|tut){1}\.(ru|com|by){1}"/>
+                                pattern="(([^@])+)@(mail|gmail|yandex|tut){1}\.(ru|com|by){1}"/>
                     </h:inputText>
                     <h:message for="email" style="color: red"/>
                     <span class="glyphicon glyphicon-envelope form-control-feedback"/>
