--- a/src/main/webapp/views/user/animal-registration.xhtml
+++ b/src/main/webapp/views/user/animal-registration.xhtml
@@ -43,7 +43,7 @@
                 </h:panelGroup>
 
                 <h:panelGroup layout="block" class="form-group has-feedback">
-                    <h:outputText value="Type"/>
+                    <h:outputText value="Type: "/>
                     <h:selectOneMenu value="#{animalModelBean.type}"
                                      converter="#{animalTypeConverter}">
                         <f:selectItems value="#{typeBean.typesMap}"/>
@@ -51,7 +51,7 @@
                 </h:panelGroup>
 
                 <h:panelGroup layout="block" class="form-group has-feedback">
-                    <h:outputText value="Gender"/>
+                    <h:outputText value="Gender: "/>
                     <h:selectOneMenu value="#{animalModelBean.gender}"
                                      converter="#{genderConverter}">
                         <f:selectItems value="#{genderBean.genderMap}"/>
@@ -76,14 +76,16 @@
                 </h:panelGroup>
                 <br/>
 
-                <h:panelGroup layout="block" class="col-xs-4 col-xs-offset-8">
+                <h:panelGroup layout="block" class="form-group has-feedback col-xs-4 col-xs-offset-8">
                     <h:commandLink value="Add"
                                    type="submit"
                                    class="btn btn-primary btn-block btn-flat"
                                    action="#{animalRegistrationBean.saveAnimal}">
                     </h:commandLink>
                 </h:panelGroup>
+                <br/>
             </h:form>
+
         </h:panelGroup>
     </h:panelGroup>
 
