master: @transactional place little changed

--- a/src/main/webapp/views/login.xhtml
+++ b/src/main/webapp/views/login.xhtml
@@ -18,11 +18,11 @@
     <script type="text/javascript" src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </h:head>
 
-<h:body class="hold-transition login-page">
+<h:body class="hold-transition login-page" style="background-image: url(/resources/images/logimage.png)">
     <h:panelGroup layout="block" class="login-box">
 
         <h:panelGroup layout="block" class="login-logo">
-            <h:outputLink value="/views/index.xhtml"><strong>Admin</strong>LTE</h:outputLink>
+            <h:outputLink value="/views/index.xhtml"><strong>AnimalShelter</strong></h:outputLink>
         </h:panelGroup>
 
         <h:panelGroup layout="block" class="login-box-body">
