--- a/src/main/webapp/views/register.xhtml
+++ b/src/main/webapp/views/register.xhtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/resources/css/AdminLTE.min.css"/>
 </h:head>
 
-<h:body class="hold-transition register-page">
+<h:body class="hold-transition register-page" style="background-image: url(/resources/images/logimage.png)">
     <h:panelGroup layout="block" class="register-box">
         <h:panelGroup layout="block" class="register-logo">
             <h:outputLink value="/views/index.xhtml"><strong>Admin</strong>LTE</h:outputLink>
