--- a/src/main/webapp/views/user/animal-registration.xhtml
+++ b/src/main/webapp/views/user/animal-registration.xhtml
@@ -77,11 +77,11 @@
                 <br/>
 
                 <h:panelGroup layout="block" class="form-group has-feedback col-xs-4 col-xs-offset-8">
-                    <h:commandLink value="Add"
+                    <h:commandButton value="Add"
                                    type="submit"
                                    class="btn btn-primary btn-block btn-flat"
                                    action="#{animalRegistrationBean.saveAnimal}">
-                    </h:commandLink>
+                    </h:commandButton>
                 </h:panelGroup>
                 <br/>
             </h:form>
