--- a/src/main/webapp/views/login.xhtml
+++ b/src/main/webapp/views/login.xhtml
@@ -3,8 +3,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core" xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
     <title>AdminLTE 2 | Log in</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -20,10 +19,6 @@
 
 <h:body class="hold-transition login-page" style="background-image: url(/resources/images/logimage.png)">
     <h:panelGroup layout="block" class="login-box">
-
-        <h:panelGroup layout="block" class="login-logo">
-            <h:outputLink value="/views/index.xhtml"><strong>AnimalShelter</strong></h:outputLink>
-        </h:panelGroup>
 
         <h:panelGroup layout="block" class="login-box-body">
             <p class="login-box-msg">Sign in to start your session</p>
