--- a/src/main/webapp/views/user/animal-registration.xhtml
+++ b/src/main/webapp/views/user/animal-registration.xhtml
@@ -3,10 +3,8 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:p="http://www.springframework.org/tags/form">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
 <h:head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -20,9 +18,6 @@
 
 <h:body class="hold-transition register-page" style="background-image: url(/resources/images/logimage.png)">
     <h:panelGroup layout="block" class="register-box">
-        <h:panelGroup layout="block" class="register-logo">
-            <h:outputLink value="/views/index.xhtml"><strong>Admin</strong>LTE</h:outputLink>
-        </h:panelGroup>
 
         <h:panelGroup layout="block" class="register-box-body">
             <p class="login-box-msg">Add a new animal</p>
@@ -78,9 +73,9 @@
 
                 <h:panelGroup layout="block" class="form-group has-feedback col-xs-4 col-xs-offset-8">
                     <h:commandButton value="Add"
-                                   type="submit"
-                                   class="btn btn-primary btn-block btn-flat"
-                                   action="#{animalRegistrationBean.saveAnimal}">
+                                     type="submit"
+                                     class="btn btn-primary btn-block btn-flat"
+                                     action="#{animalRegistrationBean.saveAnimal}">
                     </h:commandButton>
                 </h:panelGroup>
                 <br/>
