--- a/src/main/webapp/views/user/user-animals.xhtml
+++ b/src/main/webapp/views/user/user-animals.xhtml
@@ -4,8 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
     <f:facet name="first">
@@ -26,10 +25,6 @@
     <ui:insert name="header">
         <ui:include src="../../blocks/user/user-header.xhtml"/>
     </ui:insert>
-
-    <h:form>
-        <h:inputText value="User"/>
-    </h:form>
 
     <ui:insert>
         <ui:include src="../../blocks/user/user-animals-block.xhtml"/>
